--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -51,7 +51,7 @@
 }
 
 .nav__subitem a {
-    margin: 0rem 2.5rem 0 0;
+    margin: 0vh 2vw 0vh 0vw;
 }
 
 .nav_item a:hover, .nav__subitem a:hover {
@@ -66,6 +66,10 @@
     flex-direction: column;
     justify-content: center;
     background-color: var(--background-color);
+}
+
+.nav__submenu li {
+    margin: 2vh 0vw 1vh 0vw;
 }
 
 #movies:hover .nav__submenu {
