--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -4,6 +4,7 @@
     border-radius: 1rem;
     margin-left:1vw;
     flex-direction: column;
+    transition: 0.5s linear;
     border: 2px solid var(--secondary-color);
 }
 
