--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -7,6 +7,10 @@
     transition: 0.5s linear;
     border: 2px solid var(--secondary-color);
 }
+.card:hover{
+    cursor: pointer;
+    border: 2px solid var(--hover-color);
+}
 
 .card img {
     width:13vw;
