--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -34,7 +34,8 @@
 }
 
 .btn-wrapper .card__btn-watch {
-    width: 45%;
+    width:30%;
+    height:4vh;
     border: none;
     padding: 0.5rem;
     border-radius: 1rem;
@@ -48,7 +49,8 @@
 }
 
 .btn-wrapper .card__btn-watched {
-    width: 45%;
+    width: 30%;
+    height:4vh;
     padding: 0.5rem;
     border-radius: 1rem;
     color: var(--secondary-color);
@@ -61,8 +63,44 @@
     background-color: var(--primary-color);
 }
 
+.btn-wrapper .card__btn-remove {
+    width:25%;
+    height:3.5vh;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color:var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    background-color: red;
+}
+.btn-wrapper .card__btn-remove :hover{
+    cursor: pointer;
+    opacity:0.8;
+}
+
 .card .card__rating svg {
     color: goldenrod;
     position: absolute;
     margin-top: 0.2vh;
 }
+
+.card__added{
+    width: 25%;
+    height:2vh;
+    margin-top:-0.5vh;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    background-color: var(--background-color);
+}
+.card__watched{
+    width:30%;
+    height:2vh;
+    margin-top:-0.5vh;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    background-color: var(--background-color);
+}
+
