--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,19 +1,20 @@
 .card {
     padding: 1rem;
     display: flex;
-    border-radius: 1rem;
-    margin-left:1vw;
+    border-radius:0.5rem;
+    margin-left: 1vw;
     flex-direction: column;
     transition: 0.5s linear;
     border: 2px solid var(--secondary-color);
 }
-.card:hover{
+
+.card:hover {
     cursor: pointer;
     border: 2px solid var(--hover-color);
 }
 
 .card img {
-    width:13vw;
+    width: 13vw;
     height: 20vh;
 }
 
@@ -34,11 +35,9 @@
 }
 
 .btn-wrapper .card__btn-watch {
-    width:30%;
-    height:4vh;
     border: none;
     padding: 0.5rem;
-    border-radius: 1rem;
+    border-radius: 0.3rem;
     color: var(--secondary-color);
     background-color: var(--primary-color);
 }
@@ -49,10 +48,8 @@
 }
 
 .btn-wrapper .card__btn-watched {
-    width: 30%;
-    height:4vh;
     padding: 0.5rem;
-    border-radius: 1rem;
+    border-radius: 0.3rem;
     color: var(--secondary-color);
     border: 2px solid var(--secondary-color);
     background-color: var(--background-color);
@@ -64,17 +61,17 @@
 }
 
 .btn-wrapper .card__btn-remove {
-    width:25%;
-    height:3.5vh;
+    border: none;
     padding: 0.5rem;
-    border-radius: 1rem;
-    color:var(--secondary-color);
-    border: 2px solid var(--secondary-color);
+    border-radius: 0.3rem;
     background-color: red;
+    color: var(--secondary-color);
 }
-.btn-wrapper .card__btn-remove :hover{
+
+.btn-wrapper .card__btn-remove:hover {
+    opacity: 0.8;
     cursor: pointer;
-    opacity:0.8;
+    border: 2px solid var(--secondary-color);
 }
 
 .card .card__rating svg {
@@ -83,24 +80,16 @@
     margin-top: 0.2vh;
 }
 
-.card__added{
-    width: 25%;
-    height:2vh;
-    margin-top:-0.5vh;
+.card__watched {
+    height: 2vh;
+    margin-top: -0.5vh;
     padding: 0.5rem;
-    border-radius: 1rem;
-    color: var(--secondary-color);
-    border: 2px solid var(--secondary-color);
-    background-color: var(--background-color);
-}
-.card__watched{
-    width:30%;
-    height:2vh;
-    margin-top:-0.5vh;
-    padding: 0.5rem;
-    border-radius: 1rem;
-    color: var(--secondary-color);
-    border: 2px solid var(--secondary-color);
+    font-size: 1.2rem;
+    color: goldenrod;
     background-color: var(--background-color);
 }
 
+.card__watched svg {
+    position: absolute;
+    margin-top: 0.5vh;
+}
